[package]
name = "sentry-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
tracing-subscriber = "0.2.19"
tracing-core = "0.1.18"
tracing = "0.1.26"
sentry-core = "0.23.0"
sentry = "0.23.0"
actix-rt = "2.2.0"
actix-web = "3"
tokio = "1.8"